<resources>
    <string name="app_name">Save It!</string>
    <string name="title">Title</string>
    <string name="cost_or_income">Cost or Income</string>
    <string name="value">Value</string>
    <string name="submit">submit</string>
    <string name="instructions">Instructions</string>
    <string name="type">Type</string>
    <string name="date">Date</string>
    <string name="p">P</string>
    <string name="textview1">TextView1</string>
    <string name="textview2">TextView2</string>
    <string name="dummy_button">Dummy Button
    </string>
    <string name="dummy_content">DUMMY\nCONTENT
    </string>
    <string name="title_activity_fullscreen">
        FullscreenActivity
    </string>
    <string name="choose_time_period">Choose time period</string>
    <string name="income">Income</string>
    <string name="cost">Cost</string>
    <string name="balance">Balance</string>
    <string name="Null" />
    <string name="add_money">add Money</string>
    <string name="your_balance">Your Balance</string>
    <string name="todo">TODO</string>
</resources>