<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StatisticalActivity">

    <TextView
        android:id="@+id/periodHeading"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/choose_time_period"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/periodspinner"
        android:layout_width="match_parent"
        android:layout_height="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/periodHeading" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="112dp"
        android:layout_height="41dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/income"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/periodspinner" />

    <TextView
        android:id="@+id/CostHeading"
        android:layout_width="112dp"
        android:layout_height="41dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="140dp"
        android:text="@string/cost"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/periodspinner" />

    <TextView
        android:id="@+id/BalanceHeading"
        android:layout_width="112dp"
        android:layout_height="41dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="248dp"
        android:text="@string/balance"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/periodspinner" />

    <TextView
        android:id="@+id/IncomeTextView"
        android:layout_width="112dp"
        android:layout_height="41dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:text="@string/Null"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/periodspinner" />

    <TextView
        android:id="@+id/CostTextView"
        android:layout_width="112dp"
        android:layout_height="41dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="40dp"
        android:text="@string/Null"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/periodspinner" />

    <TextView
        android:id="@+id/BalanceTextView"
        android:layout_width="112dp"
        android:layout_height="41dp"
        android:layout_marginTop="248dp"
        android:layout_marginEnd="40dp"
        android:text="@string/Null"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/periodspinner" />
</androidx.constraintlayout.widget.ConstraintLayout>